# edictum

./: .docs-style-guide.md  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  test-gate-docker.sh  test-gate.Dockerfile
.claude/agents/: code-reviewer.md
.claude/skills/: cross-repo-feature.md
.github/workflows/: ci.yml  claude.yml  notify-docs.yml  notify-parity.yml  parity-check.yml  publish.yml  review.yml
docs/: architecture.md  cli.md  compliance.md  evaluation.md  index.md  lifecycle-callbacks.md  quickstart.md  roadmap.md  use-cases.md
docs/adapters/: google-adk.md  nanobot.md  overview.md
docs/audit/: sinks.md
docs/concepts/: contracts.md  how-it-works.md  sandbox-contracts.md
docs/contracts/: templates.md  yaml-reference.md
docs/guides/: adapter-comparison.md  adversarial.md  success-check.md  writing-contracts.md
examples/: contract_cookbook.py  contracts.py  demo_agno.py  demo_claude_agent_sdk.py  demo_crewai.py  demo_langchain.py  demo_openai_agents.py  demo_semantic_kernel.py  rule_cookbook.py  rules.py
fixtures/workflow/: core.workflow.yaml
schemas/: edictum-v1.schema.json
scripts/: check-terminology.py
src/edictum/: __init__.py  _dry_run.py  _factory.py  _guard.py  _runner.py  _server_factory.py  _validators.py  approval.py  audit.py  builtins.py  envelope.py  evaluation.py  findings.py  hooks.py  otel.py  pipeline.py  rules.py  session.py  storage.py  telemetry.py
tests/: conftest.py  test_adapter_agno.py  test_adapter_claude.py  test_adapter_crewai.py  test_adapter_google_adk.py  test_adapter_langchain.py  test_adapter_nanobot.py  test_adapter_openai_agents.py  test_adapter_parity.py  test_adapter_postcondition_callback.py  test_adapter_semantic_kernel.py  test_approval.py  test_audit.py  test_builtins.py  test_docs_sync.py  test_envelope.py  test_evaluate.py  test_findings.py  test_from_yaml_multi.py  test_hooks.py  test_merge.py  test_observe_alongside.py  test_otel.py  test_pipeline.py  test_pipeline_approve.py  test_postcondition_effects.py  test_principal.py  test_protocol_compliance.py  test_review_fixes.py  test_rule_cookbook.py  test_rules.py  test_telemetry.py  test_tools_registry.py
tests/fixtures/: red-team-sandbox.yaml
tests/test_adversarial/: conftest.py  test_backend_failures.py  test_bash_bypass.py  test_concurrent.py  test_input_injection.py  test_sandbox_escape.py
tests/test_behavior/: conftest.py  test_approval_behavior.py  test_approval_session_behavior.py  test_audit_behavior.py  test_audit_lineage_behavior.py  test_batch_session_behavior.py  test_bundle_verification_behavior.py  test_callback_behavior.py  test_cli_environment_behavior.py  test_collecting_sink_behavior.py  test_custom_operators_behavior.py  test_custom_selectors_behavior.py  test_deprecation_alias_behavior.py  test_enforcement_behavior.py  test_envelope_behavior.py  test_factory_behavior.py  test_gate_import_behavior.py  test_google_adk_behavior.py  test_guard_behavior.py  test_lazy_import_behavior.py  test_local_sink_behavior.py  test_mutable_principal_behavior.py  test_observe_postcondition_behavior.py  test_otel_span_leak_behavior.py  test_otel_span_status_behavior.py  test_redaction_behavior.py  test_reload_behavior.py  test_safe_key_value_detection_behavior.py  test_sandbox_behavior.py  test_sandbox_command_chaining.py  test_sandbox_parser_security.py  test_sandbox_path_traversal.py  test_sandbox_red_team.py  test_schema_expression_behavior.py  test_semantic_kernel_behavior.py  test_sensitive_key_boundary_behavior.py  test_sensitive_key_plurals_behavior.py  test_server_behavior.py  test_server_client_behavior.py  test_server_cross_loop_behavior.py  (+16 more)
tests/test_cli/: test_cli.py  test_cli_composition.py  test_cli_json.py  test_skill_scan.py
tests/test_conformance/: test_rejection.py  test_workflow_adapter.py  test_workflow_v018.py
tests/test_gate/: test_audit_buffer.py  test_cache_behavior.py  test_category_mapping.py  test_check_behavior.py  test_config_behavior.py  test_formats_claude_code.py  test_formats_copilot_cli.py  test_formats_cursor.py  test_formats_gemini_cli.py  test_formats_opencode.py  test_install_behavior.py  test_redaction.py
tests/test_integration/: test_end_to_end.py
tests/test_server/: test_approval_backend.py  test_audit_sink.py  test_backend.py  (+7 more)
(+112 files in other folders)
