[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "edictum"
version = "0.12.2"
description = "Runtime safety for AI agents. Stop agents before they break things."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Arnold Cartagena", email = "cartagena.arnold@gmail.com" },
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = []

[project.urls]
Homepage = "https://docs.edictum.dev"
Documentation = "https://docs.edictum.dev"
Repository = "https://github.com/acartag7/edictum"
Changelog = "https://github.com/acartag7/edictum/releases"

[project.optional-dependencies]
yaml = ["pyyaml>=6.0", "jsonschema>=4.20"]
otel = ["opentelemetry-api>=1.20.0", "opentelemetry-sdk>=1.20.0", "opentelemetry-exporter-otlp>=1.20.0"]
langchain = ["langchain-core>=0.3"]
crewai = ["crewai>=0.80"]
agno = ["agno>=1.0"]
semantic-kernel = ["semantic-kernel>=1.0"]
openai-agents = ["openai-agents>=0.1"]
server = ["httpx>=0.27", "httpx-sse>=0.4"]
cli = ["click>=8.0", "rich>=13.0", "edictum[yaml]"]
all = ["edictum[yaml,otel,cli,server,langchain,crewai,agno,semantic-kernel,openai-agents]"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "coverage>=7.0",
    "httpx>=0.27",
]

[project.scripts]
edictum = "edictum.cli.main:cli"
edict = "edictum.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/edictum"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "security: marks tests as security-related (bypass vectors, boundary checks)",
]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
