[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "edictum"
version = "0.16.0"
description = "Runtime safety for AI agents. Stop agents before they break things."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Arnold Cartagena", email = "cartagena.arnold@gmail.com" },
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = []

[project.urls]
Homepage = "https://edictum.ai"
Documentation = "https://docs.edictum.ai"
Repository = "https://github.com/edictum-ai/edictum"
Changelog = "https://github.com/edictum-ai/edictum/releases"

[project.optional-dependencies]
yaml = ["pyyaml>=6.0", "jsonschema>=4.20"]
otel = ["opentelemetry-api>=1.20.0", "opentelemetry-sdk>=1.20.0", "opentelemetry-exporter-otlp>=1.20.0"]
langchain = ["langchain-core>=0.3"]
crewai = ["crewai>=0.80"]
agno = ["agno>=1.0"]
semantic-kernel = ["semantic-kernel>=1.39.4"]
openai-agents = ["openai-agents>=0.1"]
server = ["httpx>=0.27", "httpx-sse>=0.4"]
verified = ["pynacl>=1.5"]
gate = ["edictum[yaml]", "httpx>=0.27"]
all = ["edictum[yaml,otel,server,gate,verified,langchain,crewai,agno,semantic-kernel,openai-agents]"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "coverage>=7.0",
    "httpx>=0.27",
    "pynacl>=1.5",
    "pdoc>=16.0,<17",
]


[tool.hatch.build.targets.wheel]
packages = ["src/edictum"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "security: marks tests as security-related (bypass vectors, boundary checks)",
    "integration: marks tests requiring real HTTP infrastructure (deselected by default, use --run-integration)",
]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
